# sweep

./: pyproject.toml
app/cli/: main.py
app/core/: duplicates.py  hasher.py
app/ui/: base.py  duplicates.py  progress.py
tests/core/: duplicates_test.py  hasher_test.py
