[project]
name = "sweep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rich>=15.0.0",
    "typer>=0.24.1",
    "xxhash>=3.6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.uv]
package = true

[project.scripts]
sweep = "app.cli.main:app"